xx yyy zzzz: 0.4.0 Miek <miek@miek.nl>
  -- major new release, scripts are dropped --
  * rdup: use ctime not the mtime
  * rdup: if a directory's ctime is newer then the timestamp
    include all files under it
  * backup with: rdup-simple
  * restore with: rdup-restore



  * todo: rdup-restore in the same line as rdup-simple
  * todo: rdup-mirror in the same line as rdup-simple
  * todo: rdup-snapshot
  * All paths have changed /usr/bin is now used, no more sbin
  * All manual pages now fall in the section 1, not 8
  * Major rewrite of rdup-restore
  * These files are still in the source distribution, but
    not any more installed. I don't have enough time to
    properly maintain them:
  * Removed: rdup-dump, rdup-snapshot, rdup-mirror
  * Removed: rdup-mirror, rdup-dump


09 May 2007: 0.3.9 Miek <miek@miek.nl>
  -- new features and fixes --
   * Add -S and -D to the known options of rdup-restore (reported by 
     Ben Coffey)
   * Add runtime check to find mcrypt to rdup-crypt (reported by Ben
     Coffey)
   * Add runtime checks to rdup-gzip and rdup-gpg too
   * Documentation updates and tweaks
   * Added rdup-simple; 
   	- other calling semantics
	- uses ~/.rdup for storing files
   * Added rdup-gpg - encrypt with gpg, decryption makes use of
     gpg-agent, otherwise you need to type your passphrase for 
     every file
   * Force ordering of encryption and compressions. First compress
     then encrypt; all scripts do this now. 
   * Force ordering of decryption and decompression: First decrypt
     then decompress.
     

14 Mar 2007: 0.3.8 Miek <miek@miek.nl>
  -- bugfixes --
   * NOTE: -n changed semantics!
   * Add 'E:' to the known options in rdup-dump.in
   * Fix the +NUMBER argument in rdup-snapshot (reported by Joerg Rueppel)
   * Fix usage of -z (and any other option that toggles rdup's -c option)
     (thanks to J.W. Janssen for reporting)
   * Use -f in rdup-gzip (bug reported by David Martin)