@@ -85,6 +85,7 @@ gboolean gfunc_free(gpointer data, gpointer value, gpointer usr);
 gboolean gfunc_write(gpointer data, gpointer value, gpointer fp);
 gboolean gfunc_backup(gpointer data, gpointer value, gpointer usr);
 gboolean gfunc_remove(gpointer data, gpointer value, gpointer usr);
+gboolean gfunc_new(gpointer data, gpointer value, gpointer usr);
 gboolean gfunc_substract(gpointer data, gpointer value, gpointer diff);
 gboolean gfunc_remove_path(gpointer data, gpointer value, gpointer path);
 gboolean gfunc_regexp(GSList *l, char *n);
